[package]
name = "lattice-graph"
version = "0.2.0"
authors = ["aobatact <aobatact144@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
const-generic-wrap = []

[dependencies]
petgraph = "=0.5.0"
fixedbitset = "=0.2.0"
