[package]
name = "lattice-graph"
version = "0.6.0"
authors = ["aobatact <aobatact144@gmail.com>"]
edition = "2018"
resolver= "2"
license = "MPL-2.0"
keywords = ["graph", "graph-algorithms", "data-structure"]
categories = ["data-structures", "game-development"]
description = "Set of Lattice(Grid) based Graph Structures"
repository = "https://github.com/aobatact/lattice-graph"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "const-generic-wrap", "hex2d" ]

[dependencies]
petgraph = { version = "0.5", default-features = false }
fixedbitset = "0.4"
const-generic-wrap = { version = "0.3", default-features = false, optional = true }
hex2d = {version = "1.0", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.3.4"
rand = "0.8.0"
const-generic-wrap = { version = "0.3"}
rstest = "0.10.0"

[[bench]]
name = "bench"
harness = false
